--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,8 @@
-<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@picture) %> | <%= link_to "Delete", @picture, :confirm => "Are you sure you want to delete this picture?", :method => :delete %>
+<h1>Photogur - Simple Ruby on Rails Image Sharing</h1>
+
+<br>Menu: <%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@picture) %> | <%= link_to "Delete", @picture, :confirm => "Are you sure you want to delete this picture?", :method => :delete %>
 
 
-<p><%= @picture.title %>, <%= @picture.artist %></p>
+<p><b><font color=pink>Title:</b></font> <%= @picture.title %> <b><font color=pink>Artist:</font></b> <%= @picture.artist %></p>
 <%= image_tag @picture.url %>
+
